src/scss/app.scss
/* ... */
body {
  font-family: fira_sans_regular;
}

h1, h2, h3, h4, h5, h6 {
  font-family: fira_sans_regular;
  color: #4D4D4D;
  font-weight: normal;
}

h3 {
  background-color: #333;
  border-radius: 3px;
  padding: 5px 7px 2px 7px;
  color: #EEE;
  margin-bottom: $container-margin;
  font-size: 1.2em;
  text-transform: uppercase;
}

h3.smallTopMenu {
  background-color: #333;
  border-radius: 3px 0 0 3px;
  padding: 5px 7px 2px 7px;
  color: #EEE;
  margin-bottom: $container-margin;
  font-size: 1.2em;
  text-transform: uppercase;
  float: left;
}

h3.smallTopMenu {
  width: 157px;
}

h4 {
  font-size: 1.2em;
  margin: 0 0 10px;
  border-bottom: 1px solid #CCC;
  text-transform: uppercase;
}

p {
  font-size: 0.9rem;
}

legend {
  padding-top: 5px;
  font-size: 0.9rem;
  font-weight: bold;
}

label {
  font-size: 0.9rem;
  font-weight: bold;
  vertical-align: text-top;
  margin-bottom: 7px;
}

.has-tip {
  font-weight: normal;
  border: none;
}

.has-tip:hover {
  border: none;
  color: $helpColor;
}

.has-tip:after {
  content: " [?]";
  color: $helpColor;
  font-size: 0.9em;
}

.tooltip {
  background-color: $helpColor;
  border-radius: 3px;
}
.nub {
  border-color: transparent $helpColor transparent transparent !important;
}

input.invalid {
  background: #FFE4E4;
  border-color: #B60808;
}

button.tiny, .button.tiny {
  font-family: fira_sans_regular;
  font-size: 11px;
  margin: 5px 0;
}


//////////////////////////////////////////
// Layout                               //
//////////////////////////////////////////


// Navbar

#nav-container {
  margin: 0px auto;
  width: 1010px;

  #title img {
    margin-top: -3px;
  }

  #navigation-create {
    color: #FFF;

    li {
      float: left;
      padding-top: 11px;
      margin-left: 20px;

      img {
        margin-right: 5px;
        margin-top: -4px;
      }
    }

    .social.first {
      margin-left: $leftIconSize;
    }

    .social {
      margin-right: 10px;

      img {
        margin: -4px 0px 0px;
      }
    }

    a {
      font-size: 0.9rem;
      color: #FFF;
      padding: 12px 0px;
    }
  }

  li.help {
    background: $helpColor;
    color: #FFF;
    height: 40px;

    a#trigger-help {
      padding-left: 17px;
      padding-right: 17px;
      background: $helpColor;

    }
  }


}


// Container: Wrapper for Toolbar and Content

.container {
  margin: 20px auto;
  width: 1010px;
}

.ui-container {
  border: 1px solid #CCC;
  border-radius: 3px;
  background: #FAFAFA;
  margin-bottom: $container-margin;
  padding: 5px 7px;

  h4, h4:hover {
    border-bottom: 1px solid #CCC;
  }
}

.highlight {
  border-color: $helpColor !important;
  border: 3px solid;
//  background: #E0F1F6 !important;
  transition: background-color 0.3s;
}


// Toolbar

#toolbar {
  width: $leftIconSize;
  float: left;
  margin-top: 20px;

  .icon {
    display: block;
    margin-bottom: 10px;
    width: 42px;
    height: 44px;
    vertical-align: middle;
    background-color: #AAA;
    background-reapeat: no-repeat;
    background-position: center center;
    border-radius: 3px;
  }

  .icon:hover {
    background-color: #555;
  }

  .active {
    background-color: #333;
  }

  .toolbar-line {
    height: 2px;
    background: #CCC;
    border-top: 1px solid #CCC;
    border-bottom: 1px solid #FFF;
    margin: 10px 0px 10px 0px;
  }

  #trigger-type {
    background-image: url(../img/ui/type.svg);
  }

  #trigger-data {
    background-image: url(../img/ui/data.svg);
  }

  #trigger-color {
    background-image: url(../img/ui/color.svg);
  }

  #trigger-icon {
    background-image: url(../img/ui/icon.svg);
  }

  #trigger-text {
    background-image: url(../img/ui/text.svg);
  }

  #trigger-adjustments {
    background-image: url(../img/ui/adjustments.svg);
  }

  #trigger-scale {
    background-image: url(../img/ui/scale.svg);
  }

}


// Display: Wrapper for the graphics and overlays

#display {
  width: 970px;
  height: 460px;
  margin-left: $leftIconSize;
  padding: 10px 10px 0 0;
  background: #FFF;
  background-image: url(../img/ui/ruler.svg);
  background-repeat: no-repeat;
  position: relative;
  box-shadow: 0 0 2px 1px #AAA;

  #graph-container {
    overflow: hidden;
  }

  #graph {
    width: 100%;
    height: 100%;
  }

  .move-right {
    margin-left: $overlay-small-width;
  }

  .move-far-right {
    margin-left: $overlay-big-width;
  }

}
/* ... */

